deploy/wip/multitool-dest-rule-distribute.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: multitool
spec:
  host: multitool
  trafficPolicy:
    loadBalancer:
      localityLbSetting:
        distribute:
         - from: eu-central-1/zone-a/*
           to:
             eu-central-1/zone-a/*: 90
             eu-central-1/zone-b/*: 10
    connectionPool:
      tcp:
        maxConnections: 100
      http:
        http2MaxRequests: 100
        maxRequestsPerConnection: 10
    outlierDetection:
      consecutiveGatewayErrors: 7
      interval: 30s
      baseEjectionTime: 30s
