deploy/wip/virtual-service-shadow.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: name
spec:
  host: name
  subsets:
  - name: name-v1
    labels:
      version: v1
  - name: name-v2
    labels:
      version: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: name
spec:
  hosts:
  - name
  gateways:
  - mesh
  http:
  - route:
    - destination:
        host: name
        subset: name-v1
      weight: 100
    - destination:
        host: name
        subset: name-v2
    mirror:
      host: name
      subset: name-v2
    mirrorPercentage:
      value: 100.0
